syntax = "proto3";

package experiment;
option go_package = "github.com/grpc-ecosystem/grpc-gateway/experiment/proto/api";

import "google/api/annotations.proto";

service Events {
  rpc StreamEvents(EventRequest) returns (stream EventResponse) {
    option (google.api.http) = {
      get: "/events"
    };
  }
}

message EventRequest {
  repeated string topics = 1;
}

message EventResponse {
  string event = 1;
}